noir/noir-repo/test_programs/compile_failure/restricted_bit_sizes/src/main.nr
fn main() -> pub u63 {
    5
}
